--- a/Desafio 2/index.html
+++ b/Desafio 2/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <title>JordanShoes</title>
 </head>
 
@@ -19,9 +19,12 @@
         </div>
     </header>
 
-    <!-- Background -->
-    <section>
-
+    <!-- Background Hero -->
+    <section class="hero">
+        <div class="text-hero">
+            <h2>A melhor loja de Jordan</h2>
+            <p>O tênis Jordan é fruto de uma velha e forte parceria entre a Nike e o jogador Michael Jordan.</p>
+        </div>
     </section>
 
     <!-- MAIN -->
