--- a/Desafio 2/index.html
+++ b/Desafio 2/index.html
@@ -22,14 +22,19 @@
     <!-- Background Hero -->
     <section class="hero">
         <div class="text-hero">
-            <h2>A melhor loja de Jordan</h2>
-            <p>O tênis Jordan é fruto de uma velha e forte parceria entre a Nike e o jogador Michael Jordan.</p>
+            <h2> A melhor loja de Jordan</h2>
+            <p> O tênis Jordan é fruto de uma velha e forte parceria entre a Nike e o jogador Michael Jordan.</p>
         </div>
     </section>
 
     <!-- MAIN -->
     <main>
-
+        <div class="main-container">
+            <div class="main-title">
+                <h2>Destaques</h2>
+                <p>Frete grátis e chinelo de brinde é aqui, aproveite por tempo limitado.</p>
+            </div>
+        </div>
     </main>
 </body>
 </html>
