--- a/Desafio 2/index.html
+++ b/Desafio 2/index.html
@@ -34,6 +34,32 @@
                 <h2>Destaques</h2>
                 <p>Frete grátis e chinelo de brinde é aqui, aproveite por tempo limitado.</p>
             </div>
+            <div class="main-cards">
+                <div class="cards">
+                    <img src="assets/image/1.png" alt="">
+                </div>
+                <div class="cards">
+                    <img src="assets/image/2.png" alt="">
+                </div>
+                <div class="cards">
+                    <img src="assets/image/3.png" alt="">
+                </div>
+                <div class="cards">
+                    <img src="assets/image/4.png" alt="">
+                </div>
+                <div class="cards">
+                    <img src="assets/image/5.png" alt="">
+                </div>
+                <div class="cards">
+                    <img src="assets/image/6.png" alt="">
+                </div>
+                <div class="cards">
+                    <img src="assets/image/7.png" alt="">
+                </div>
+                <div class="cards">
+                    <img src="assets/image/8.png" alt="">
+                </div>
+            </div>
         </div>
     </main>
 </body>
