--- a/Desafio 2/index.html
+++ b/Desafio 2/index.html
@@ -62,5 +62,8 @@
             </div>
         </div>
     </main>
+    <footer>
+        Todos os direitos reservados.
+    </footer>
 </body>
 </html>
