--- a/Desafio 2/index.html
+++ b/Desafio 2/index.html
@@ -62,8 +62,10 @@
             </div>
         </div>
     </main>
+
+    <!-- Footer -->
     <footer>
-        Todos os direitos reservados.
+        <p>Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
