Hero Text - Typed JS animation

--- a/Desafio 2/index.html
+++ b/Desafio 2/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/styles.css">
+    
+    <!-- Script Typed -->
+    <script defer src="assets/js/typed.js"></script>
+    <script defer src="assets/js/script-typed.js"></script> 
+
     <title>JordanShoes</title>
 </head>
 
@@ -23,7 +28,7 @@
     <section class="hero">
         <div class="text-hero">
             <h2> A melhor loja de Jordan</h2>
-            <p> O tênis Jordan é fruto de uma velha e forte parceria entre a Nike e o jogador Michael Jordan.</p>
+            <p><span id="typed"></span></p>
         </div>
     </section>
 
