--- a/Desafio 2/index.html
+++ b/Desafio 2/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/styles.css">
-    
+    <link rel="icon" href="assets/image/favicon.ico" type="image/x-icon">
     <!-- Script Typed -->
     <script defer src="assets/js/typed.js"></script>
     <script defer src="assets/js/script-typed.js"></script> 
