Main container, Card, Colors

--- a/Desafio 3/index.html
+++ b/Desafio 3/index.html
@@ -26,7 +26,29 @@
 
     <!-- MAIN -->
     <main>
-
+        <div class="main-container">
+            <div class="main-cards">
+                <div class="cards">
+                    <div class="cards-color red"></div>
+                    
+                </div>
+                <div class="cards">
+                    <div class="cards-color blue"></div>
+                </div>
+                <div class="cards">
+                    <div class="cards-color pink"></div>
+                </div>
+                <div class="cards">
+                    <div class="cards-color green"></div>
+                </div>
+                <div class="cards">
+                    <div class="cards-color yellow"></div>
+                </div>
+                <div class="cards">
+                    <div class="cards-color purple"></div>
+                </div>
+            </div>
+        </div>
     </main>
     
     <!-- Footer -->
