Main Cards Texts

--- a/Desafio 3/index.html
+++ b/Desafio 3/index.html
@@ -30,22 +30,45 @@
             <div class="main-cards">
                 <div class="cards">
                     <div class="cards-color red"></div>
-                    
+                    <div class="cards-text">
+                        <h3> Titulo do Card </h3>
+                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum in neque et nisl. </p>
+                    </div>
                 </div>
                 <div class="cards">
                     <div class="cards-color blue"></div>
+                    <div class="cards-text">
+                        <h3> Titulo do Card </h3>
+                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum in neque et nisl. </p>
+                    </div>
                 </div>
                 <div class="cards">
                     <div class="cards-color pink"></div>
+                    <div class="cards-text">
+                        <h3> Titulo do Card </h3>
+                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum in neque et nisl. </p>
+                    </div>
                 </div>
                 <div class="cards">
                     <div class="cards-color green"></div>
+                    <div class="cards-text">
+                        <h3> Titulo do Card </h3>
+                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum in neque et nisl. </p>
+                    </div>
                 </div>
                 <div class="cards">
                     <div class="cards-color yellow"></div>
+                    <div class="cards-text">
+                        <h3> Titulo do Card </h3>
+                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum in neque et nisl. </p>
+                    </div>
                 </div>
                 <div class="cards">
                     <div class="cards-color purple"></div>
+                    <div class="cards-text">
+                        <h3> Titulo do Card </h3>
+                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum in neque et nisl. </p>
+                    </div>
                 </div>
             </div>
         </div>
