--- a/Desafio 3/index.html
+++ b/Desafio 3/index.html
@@ -76,7 +76,21 @@
     
     <!-- Footer -->
     <footer>
-
+        <div class="footer-container">
+            <div class="footer-content">
+                <div class="footer-tittle">
+                    <h2> Entre em contato</h2>
+                </div>
+                <div class="footer-form">
+                    <form style="visibility: visible; opacity: 1; transition: opacity 0.6s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
+                        <input type="text" name="Nome" placeholder="Nome">
+                        <input type="email" name="Email" placeholder="Email">
+                        <input type="text" name="Telefone" maxlength="16" placeholder="Telefone">
+                        <textarea name="Mensagem" placeholder="Mensagem..."></textarea>
+                    </form>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
