--- a/Desafio 3/index.html
+++ b/Desafio 3/index.html
@@ -82,11 +82,12 @@
                     <h2> Entre em contato</h2>
                 </div>
                 <div class="footer-form">
-                    <form style="visibility: visible; opacity: 1; transition: opacity 0.6s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
+                    <form>
                         <input type="text" name="Nome" placeholder="Nome">
                         <input type="email" name="Email" placeholder="Email">
                         <input type="text" name="Telefone" maxlength="16" placeholder="Telefone">
                         <textarea name="Mensagem" placeholder="Mensagem..."></textarea>
+                        <button type="submit"> Enviar Mensagem </button>
                     </form>
                 </div>
             </div>
